--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# Compiled class file
-*.class
+**/.gitignore
+!/.gitignore
 
-# Log file
-*.log
+# Eclipse files
+.classpath
+.settings
+.project
+.springBeans
 
-# BlueJ files
-*.ctxt
+# Checkstyle, findbugs and other eclipse plugins
+*/.checkstyle
+*/.fbExcludeFilterFile
+**/.factorypath
+*/.apt_generated/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Jenv configuration
+.java-version
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Intellij
+.idea/
+*.iml
+*.iws
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Netbeans files
+nbactions.xml
+
+# Maven target folder
+target/
+bin/
+.flattened-pom.xml
+
+# MAC stuff
+.DS_Store
+
+# Generated pom
+core/dependency-reduced-pom.xml
+
+# Build script log
+/build.log
+
+/maven-settings/repository
